[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbbox"
version = "0.1.0"
description = "Simple SQLite database utility with CRUD operations via CLI"
readme = "README.md"
authors = [
    {name = "Jeff Mirabile", email = "jmmirabile@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "confbox>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jmmirabile/dbbox"
Repository = "https://github.com/jmmirabile/dbbox"
Issues = "https://github.com/jmmirabile/dbbox/issues"

[project.scripts]
dbbox = "dbbox.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbbox*"]
